# VGAinator

./: 640x480at60_25.175MHz.c  640x480at60_25.175MHz_w_line  640x480at60_25.175MHz_w_line_cnt.c  CMakeLists.txt  README.md  Testing2_640x480at60_25.175MHz.c  Testing2_640x480at60_25.175MHz_Dice.c  charset1.c  charset1.h
KiCad/DliceAndDice/: VGA_Testing2_8BitSlice.sch-bak  VGA_Testing2_8BitSliceAndDice.sch  VGA_Testing2_8BitSliceAndDice.sch-bak
KiCad/FastCounter/FastCount1/: FastCount1.pro  FastCount1.sch  FastCount1.sch-bak
KiCad/FastCounter/ProgrammableCounterA/: ProgrammableCounterA.pro  ProgrammableCounterA.sch  ProgrammableCounterA.sch-bak
KiCad/FastCounter/ProgrammableCounterB/ProgrammableCounterB/: ProgrammableCounterB.net  ProgrammableCounterB.pro  ProgrammableCounterB.sch  ProgrammableCounterB.sch-bak
KiCad/VGA_Testing1/: VGA_Testing1.sch-bak
KiCad/VGA_Testing2/: VGA_Testing2.pro  VGA_Testing2.sch  VGA_Testing2.sch-bak  VGA_Testing2_8BitDice.sch  VGA_Testing2_8BitDice.sch-bak  VGA_Testing2_8BitSlice.sch-bak
Tests/: 161test1.pvs  161test1.sr
